Update margin bottom of project content to fix spacing issues
When used flipmove, need to render children as divs (native elements),
but this screwed up bottom spacing. Fix that bottom spacing in this
commit

--- a/src/Components/Projects/Project/index.css
+++ b/src/Components/Projects/Project/index.css
@@ -13,7 +13,7 @@
 .Project .Content {
   width: 80%;
   margin: 0 auto;
-  margin-bottom: 1em;
+  padding-bottom: 1em;
 }
 
 .Project h2 {
